gccida/c2/commit_edge_insertions
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1873:4: error: expected ';' after expression
rtx end; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1873:5: error: use of undeclared identifier 'end'
rtx end; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1906:1: error: use of undeclared identifier 'end'
end = dest->end; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1909:1: error: use of undeclared identifier 'end'
end = dest->end; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1910:17: error: use of undeclared identifier 'end'
if ( *( _WORD *)end != 33 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1918:8: error: use of undeclared identifier 'end'
head = end; 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1919:1: error: use of undeclared identifier 'end'
end = ( rtx)end[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1921:20: error: use of undeclared identifier 'end'
while ( *( _WORD *)end == 37 && end[2].fld[0].rtint == -96 ); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1921:33: error: use of undeclared identifier 'end'
while ( *( _WORD *)end == 37 && end[2].fld[0].rtint == -96 ); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1937:1: error: use of undeclared identifier 'end'
end = ( rtx)rtx[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1964:1: error: use of undeclared identifier 'end'
end = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/cfgrtl.c:1966:41: error: use of undeclared identifier 'end'
nonnote_insn = emit_insns_after( insns, end); 
                                        ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/commit_edge_insertions/src/obj/cfgrtl.o] Error 1
